--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -21,7 +21,7 @@ jobs:
           node-version: '22'
 
       - name: Install dependencies
-        run: pnpm i
+        run: npm i -g pnpm && pnpm i
 
       - name: Build
         run: pnpm build
