--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -1,36 +1,58 @@
-name: Deploy to GitHub Pages
+name: Deploy the documentation to github pages
 
 on:
+  workflow_dispatch: { }
   push:
     branches:
-      - main
+      - "main"
+    paths:
+      - "documentation/**"
+      - "packages/*/src/**/*.ts"
+      - ".github/workflows/documentation-gh-pages.yaml"
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v3
         with:
-          node-version: '22'
+          node-version: "20.x"
 
-      - name: Install dependencies
-        run: npm i -g pnpm && pnpm i
+      - name: Build documentation
+        run: |
+          set -xe
+          npm i -g pnpm
+          pnpm i
+          pnpm build
 
-      - name: Build
-        run: pnpm build
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
 
-      - name: Configure SPA routing
-        run: cp dist/index.html dist/404.html
-
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: dist
-          branch: gh-pages
+        id: deployment
+        uses: actions/deploy-pages@v3
