--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: dist/
 
   # Deployment job
   deploy:
