--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -39,6 +39,7 @@ jobs:
           pnpm build
 
       - name: Upload artifact
+        id: deployment
         uses: actions/upload-pages-artifact@v3
         with:
           path: dist/
