--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -6,11 +6,6 @@ on:
     branches:
       - "main"
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -19,7 +14,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -31,20 +25,20 @@ jobs:
         with:
           node-version: "20.x"
 
-      - name: Build documentation
+      - name: Build static files
+        id: build
         run: |
           set -xe
           npm i -g pnpm
           pnpm i
           pnpm build
 
-      - name: Upload artifact
+      - name: Upload static files as artifact
         id: deployment
         uses: actions/upload-pages-artifact@v3
         with:
           path: dist/
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
@@ -54,4 +48,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
